Got a very basic profiling view working in the viewer program.

--- a/Code/Core/Core.vcxproj.filters
+++ b/Code/Core/Core.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\Foundation\src\timing.cpp">
       <Filter>Foundation</Filter>
     </ClCompile>
+    <ClCompile Include="bindings\bindings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Foundation\src\fileio.h">
