--- a/Code/Core/Core.vcxproj
+++ b/Code/Core/Core.vcxproj
@@ -283,6 +283,7 @@
     <ClCompile Include="..\Foundation\src\strings.cpp" />
     <ClCompile Include="..\Foundation\src\timing.cpp" />
     <ClCompile Include="..\Foundation\src\win32_specific.cpp" />
+    <ClCompile Include="bindings\bindings.cpp" />
     <ClCompile Include="src\core.cpp" />
     <ClCompile Include="src\tests.cpp" />
   </ItemGroup>
