Fixed a few different bugs.

--- a/Code/Core/Core.vcxproj
+++ b/Code/Core/Core.vcxproj
@@ -280,6 +280,7 @@
     <ClCompile Include="..\Foundation\src\fileio.cpp" />
     <ClCompile Include="..\Foundation\src\foundation.cpp" />
     <ClCompile Include="..\Foundation\src\memutils.cpp" />
+    <ClCompile Include="..\Foundation\src\random.cpp" />
     <ClCompile Include="..\Foundation\src\strings.cpp" />
     <ClCompile Include="..\Foundation\src\timing.cpp" />
     <ClCompile Include="..\Foundation\src\win32_specific.cpp" />
@@ -296,6 +297,7 @@
     <ClInclude Include="..\Foundation\src\math\v4.h" />
     <ClInclude Include="..\Foundation\src\memutils.h" />
     <ClInclude Include="..\Foundation\src\os_specific.h" />
+    <ClInclude Include="..\Foundation\src\random.h" />
     <ClInclude Include="..\Foundation\src\strings.h" />
     <ClInclude Include="..\Foundation\src\timing.h" />
     <ClInclude Include="bindings\bindings.h" />
