--- a/Code/Core/Core.vcxproj.filters
+++ b/Code/Core/Core.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="..\Foundation\src\random.cpp">
       <Filter>Foundation</Filter>
     </ClCompile>
+    <ClCompile Include="src\dbgdraw.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Foundation\src\fileio.h">
@@ -88,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="..\Foundation\src\random.h">
       <Filter>Foundation</Filter>
+    </ClInclude>
+    <ClInclude Include="src\dbgdraw.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
