--- a/Code/Core/Core.vcxproj
+++ b/Code/Core/Core.vcxproj
@@ -282,6 +282,7 @@
   <ItemGroup>
     <ClCompile Include="..\Foundation\src\fileio.cpp" />
     <ClCompile Include="..\Foundation\src\foundation.cpp" />
+    <ClCompile Include="..\Foundation\src\math\intersect.cpp" />
     <ClCompile Include="..\Foundation\src\memutils.cpp" />
     <ClCompile Include="..\Foundation\src\random.cpp" />
     <ClCompile Include="..\Foundation\src\strings.cpp" />
@@ -295,6 +296,7 @@
   <ItemGroup>
     <ClInclude Include="..\Foundation\src\fileio.h" />
     <ClInclude Include="..\Foundation\src\foundation.h" />
+    <ClInclude Include="..\Foundation\src\math\intersect.h" />
     <ClInclude Include="..\Foundation\src\math\math.h" />
     <ClInclude Include="..\Foundation\src\math\v2.h" />
     <ClInclude Include="..\Foundation\src\math\v3.h" />
