--- a/Code/Core/Core.vcxproj
+++ b/Code/Core/Core.vcxproj
@@ -286,6 +286,7 @@
     <ClCompile Include="..\Foundation\src\memutils.cpp" />
     <ClCompile Include="..\Foundation\src\random.cpp" />
     <ClCompile Include="..\Foundation\src\strings.cpp" />
+    <ClCompile Include="..\Foundation\src\threads.cpp" />
     <ClCompile Include="..\Foundation\src\timing.cpp" />
     <ClCompile Include="..\Foundation\src\win32_specific.cpp" />
     <ClCompile Include="bindings\bindings.cpp" />
@@ -305,6 +306,7 @@
     <ClInclude Include="..\Foundation\src\os_specific.h" />
     <ClInclude Include="..\Foundation\src\random.h" />
     <ClInclude Include="..\Foundation\src\strings.h" />
+    <ClInclude Include="..\Foundation\src\threads.h" />
     <ClInclude Include="..\Foundation\src\timing.h" />
     <ClInclude Include="bindings\bindings.h" />
     <ClInclude Include="src\core.h" />
