--- a/Code/UnitySample/.gitignore
+++ b/Code/UnitySample/.gitignore
@@ -9,6 +9,7 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/run_tree/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
